# streaming-model-cascades

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: ARXIV_56180.csv  BOOLQ_P0_12697.csv  IMDB_50000.csv  MMLU_5K.csv  README.md  SST2_68221.csv
scripts/: reproduce.sh
src/icefall/: datasets.py  harness.py
src/icefall/cascades/: gam_cal_dynamic_cascade.py  model_cascade.py  supg_it_cascade.py  supg_recall_only_cascade.py  supg_sp_cascade.py
src/icefall/cascades/executor/: precomputed_model.py
src/icefall/cascades/sampling/: iterative_sampling_method.py  iterative_sampling_state.py  sampling_method.py  sampling_state.py
src/icefall/experiments/: dataset_characterization.py  exp1_pareto.py  exp3_reliability.py
src/icefall/figures/: plot_pareto_pub.py  tables.py
src/icefall/stream_runtime/: batch_operator.py  engine.py  expr.py  operator.py  operator_link.py  result_sink.py  table_scan.py
tests/: test_gamcal_features.py  test_iterative_sampling_method.py  test_iterative_sampling_state.py  test_precomputed_model.py  test_smoke.py  test_tables_smoke.py
